test/sources/fail/float.ys
meth floatfail(): int{
    b: float = -05.;
    yeet 0;
}